# leapfrogai-backend-ctransformers

./: .gitignore  CODEOWNERS  Dockerfile  Dockerfile.gpu  Dockerfile.test  LICENSE  Makefile  README.md  config.example.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: dev-docker-build-push-amd64.yaml  dev-docker-build-push-arm64.yaml  dev-docker-build-push.yaml  docker-build-push.yaml  release-docker-build-push-amd64.yaml  release-docker-build-push-arm64.yaml  release-docker-build-push.yaml
tests/: test.py  test_stream.py
