[project]
name = "leapfrogai-backend-ctransformers"
version = "0.4.0"
dependencies = [
    "leapfrogai >= 0.4.0",
    "ctransformers >= 0.2.27",
]
requires-python = ">=3.11.4"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "nvidia-cublas-cu12", "nvidia-cuda-runtime-cu12"]
gpu = ["nvidia-cublas-cu12", "nvidia-cuda-runtime-cu12"]

[tool.pip-tools]
generate-hashes = true