[project]
name = "leapfrogai-backend-ctransformers"
version = "0.4.0"

description = "ctransformers based backend for LeapfrogAI"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11.4, <3.12"
dependencies = ["leapfrogai == 0.4.0", "ctransformers == 0.2.27"]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "black",
    "isort",
    "nvidia-cublas-cu12",
    "nvidia-cuda-runtime-cu12",
]
gpu = ["nvidia-cublas-cu12", "nvidia-cuda-runtime-cu12"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.pip-tools]
generate-hashes = true
